--- a/index.html
+++ b/index.html
@@ -21,5 +21,24 @@
     <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
 
     <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <script type='text/javascript'>
+	              function initEmbeddedMessaging() {
+		            try {
+			          embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
+          			embeddedservice_bootstrap.init(
+				        '00DAe0000019s0b',
+				        'UK_Owner_Cottages',
+				        'https://awaze--msdevelop.sandbox.my.site.com/ESWUKOwnerCottages1705493623899',
+				        {
+					      scrt2URL: 'https://awaze--msdevelop.sandbox.my.salesforce-scrt.com'
+				        }
+			          );
+		            } catch (err) {
+			          console.error('Error loading Embedded Messaging: ', err);
+		            }
+	              };
+                </script>
+                <script type='text/javascript' src='https://awaze--msdevelop.sandbox.my.site.com/ESWUKOwnerCottages1705493623899/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
   </body>
 </html>
